feat: Add RSB writer, PAM encoder, and RTON serialization capabilities.

--- a/core/patch/Cargo.toml
+++ b/core/patch/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# We use 'vcdiff' crate which is a pure Rust implementation compatible with open-vcdiff
-vcdiff = "0.1.0"
+# vcdiff replacement (pure Rust VCDIFF/RFC 3284)
+oxidelta = "0.1.4"
 thiserror = "1.0"
