--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ resolver = "2"
 
 [workspace.package]
 edition = "2024"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
