--- a/core/patch/Cargo.toml
+++ b/core/patch/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.5.0"
 # vcdiff replacement (pure Rust VCDIFF/RFC 3284)
 oxidelta = "0.1.4"
 thiserror = "1.0"
