--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,5 +21,7 @@ popfx = { version = "0.1.0", path = "../core/popfx" }
 bnk = { version = "0.1.0", path = "../core/bnk" }
 wem = { version = "0.1.0", path = "../core/wem" }
 patch = { version = "0.1.0", path = "../core/patch" }
+smf = { version = "0.1.0", path = "../core/smf" }
 image = "0.25"
 serde-xml-rs = "0.8.2"
+md-5 = "0.10.6"
