feat: Add atlas sprite sheet processing, enhance texture (PTX) encoding/decoding, and refactor core processing logic into dedicated modules with consolidated utilities.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -25,3 +25,4 @@ smf = { version = "0.1.0", path = "../core/smf" }
 image = "0.25"
 serde-xml-rs = "0.8.2"
 md-5 = "0.10.6"
+atlas = { path = "../core/atlas" }
