--- a/core/atlas/Cargo.toml
+++ b/core/atlas/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "newton"
+name = "atlas"
 version = "0.1.0"
-edition.workspace = true
+edition = "2021"
 
 [dependencies]
-
-byteorder = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "1.0"
-serde-xml-rs = "0.8.2"
+image = "0.25"
 anyhow = "1.0"
+thiserror = "1.0"
+
+[dev-dependencies]
+tempfile = "3.25.0"
