--- a/core/bnk/Cargo.toml
+++ b/core/bnk/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+utils = { path = "../utils" }
 thiserror = "1.0"
 byteorder = "1.5"
 anyhow = "1.0"
