--- a/core/rsb/Cargo.toml
+++ b/core/rsb/Cargo.toml
@@ -9,4 +9,10 @@ byteorder = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+shared_utils = { package = "utils", path = "../utils" }
 encoding_rs = "0.8"
+rsg = { path = "../rsg" }
+anyhow = "1.0"
+ptx = { path = "../ptx" }
+image = "0.25"
+rayon = "1.8"
