--- a/core/rsg/Cargo.toml
+++ b/core/rsg/Cargo.toml
@@ -9,3 +9,4 @@ byteorder = "1.5"
 flate2 = "1.0"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+shared_utils = { package = "utils", path = "../utils" }
