--- a/core/lawnstrings/Cargo.toml
+++ b/core/lawnstrings/Cargo.toml
@@ -6,5 +6,6 @@ edition.workspace = true
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-anyhow = "1.0"
+thiserror = "1.0"
+
 encoding_rs = "0.8"
