--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
-ptx = { path = "../core/ptx" }
-rsg = { path = "../core/rsg" }
 rsb = { path = "../core/rsb" }
 rton = { path = "../core/rton" }
 newton = { path = "../core/newton" }
@@ -18,6 +16,7 @@ serde_json = "1.0"
 byteorder = "1.5"
 rayon = "1.11.0"
 popfx = { version = "0.1.0", path = "../core/popfx" }
+resource = { version = "0.1.0", path = "../core/resource" }
 bnk = { version = "0.1.0", path = "../core/bnk" }
 wem = { version = "0.1.0", path = "../core/wem" }
 patch = { version = "0.1.0", path = "../core/patch" }
@@ -26,3 +25,4 @@ image = "0.25"
 serde-xml-rs = "0.8.2"
 md-5 = "0.10.6"
 atlas = { path = "../core/atlas" }
+pvz2_resources = { path = "../core/resources", package = "resources" }
