feat: Remove `resource` crate and enhance `pam` with XFL and HTML processing, including a new resolution option.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "core/smf",
     "core/atlas",
     "core/utils",
-    "core/resources", "core/resource",
+    "core/resources",
 ]
 resolver = "2"
 
