--- a/core/pam/Cargo.toml
+++ b/core/pam/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = "1.0.149"
 image = "0.25.0"
 apng = "0.3.4"
 rayon = "1.11.0"
+regex = "1.12.3"
+quick-xml = "0.39.2"
+scraper = "0.25.0"
