--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ members = [
     "core/atlas",
     "core/utils",
     "core/resources",
+    "core/pak",
+    "core/reanim",
+    "core/particles",
 ]
 resolver = "2"
 
