--- a/core/pak/Cargo.toml
+++ b/core/pak/Cargo.toml
@@ -8,3 +8,4 @@ byteorder = "1.5.0"
 thiserror = "1.0"
 flate2 = { version = "1.0", features = ["zlib"] }
 serde = { version = "1.0", features = ["derive"] }
+zip = { version = "8.1", default-features = false, features = ["deflate"] }
